--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tasty-treats",
   "version": "1.0.0",
-  "main": "index.js",
+  "source": "src/index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build src/index.html --public-url ./",
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "gh-pages": "^6.3.0",
-    "parcel": "^2.14.4"
+    "parcel": "^2.14.4",
+    "svgo": "^3.3.2"
   }
 }
