--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
   "description": "",
   "devDependencies": {
     "gh-pages": "^6.3.0",
-    "parcel": "^2.14.4",
+    "parcel": "^2.15.4",
     "svgo": "^3.3.2"
+  },
+  "dependencies": {
+    "choices.js": "^9.0.1",
+    "lodash.debounce": "^4.0.8",
+    "toastify-js": "^1.12.0",
+    "tui-pagination": "^3.4.1"
   }
 }
